--- a/requirements.txt
+++ b/requirements.txt
@@ -6,4 +6,7 @@ flask-restful>=0.3.4
 python-dateutil>=2.2
 nose>=1.3.7
 boto3>=1.2.2
-nexmo>=1.0.1
+PyJWT>=1.4.1
+passlib>=1.6.5
+cryptography>=1.4
+
