--- a/bower.json
+++ b/bower.json
@@ -19,7 +19,9 @@
     "bootstrap-sass": "~3.3.5",
     "fontawesome": "~4.3.0",
     "jed": "~1.1.0",
-    "moment": "~2.14.1"
+    "moment": "~2.14.1",
+    "bootstrap-table": "~1.11.0",
+    "json-editor": "~0.7.28"
   },
   "overrides": {
     "jed": {
