--- a/bower.json
+++ b/bower.json
@@ -21,7 +21,8 @@
     "jed": "~1.1.0",
     "moment": "~2.14.1",
     "bootstrap-table": "~1.11.0",
-    "json-editor": "~0.7.28"
+    "json-editor": "~0.7.28",
+    "vis": "~4.16.1"
   },
   "overrides": {
     "jed": {
