--- a/babel.cfg
+++ b/babel.cfg
@@ -1,4 +1,4 @@
 [python: meerkat_auth/**.py]
-[jinja2: meerkat_auth/templates/**.html]
+[jinja2: meerkat_auth/templates/**/*.html]
 extensions=jinja2.ext.autoescape,jinja2.ext.with_
 [javascript: meerkat_auth/src/js/*.js]
