--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,8 @@ install:
 - pip install -r requirements.txt
 # As per http://austinpray.com/ops/2015/09/20/change-travis-node-version.html
 - rm -rf ~/.nvm && git clone https://github.com/creationix/nvm.git ~/.nvm && (cd ~/.nvm && git checkout `git describe --abbrev=0 --tags`) && source ~/.nvm/nvm.sh && nvm install $TRAVIS_NODE_VERSION
-- npm install
+- npm install -g yarn
+- yarn install
 
 before_script:
 - bower install
