--- a/bower.json
+++ b/bower.json
@@ -22,7 +22,8 @@
     "moment": "~2.14.1",
     "bootstrap-table": "~1.11.0",
     "json-editor": "~0.7.28",
-    "vis": "~4.16.1"
+    "vis": "~4.16.1",
+    "raven-js": "~3.12.0"
   },
   "overrides": {
     "jed": {
