--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ install:
 - rm -rf ~/.nvm && git clone https://github.com/creationix/nvm.git ~/.nvm && (cd ~/.nvm
   && git checkout `git describe --abbrev=0 --tags`) && source ~/.nvm/nvm.sh && nvm
   install $TRAVIS_NODE_VERSION
-- npm install -g yarn bower
+- npm install -g yarn bower gulp
 - yarn install
 before_script:
 - bower install
