--- a/package.json
+++ b/package.json
@@ -29,15 +29,11 @@
     "main-bower-files": "~2.12.0",
     "readable-stream": "~2.0.2",
     "xtend": "~4.0.0",
-    "yargs": "~3.15.0",
-    "snyk": "^1.45.0"
+    "yargs": "~3.15.0"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "snyk-protect": "snyk protect",
-    "prepublish": "npm run snyk-protect"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "ISC",
-  "snyk": true
+  "license": "ISC"
 }
