--- a/requirements.txt
+++ b/requirements.txt
@@ -13,3 +13,6 @@ cryptography==1.6
 flask-babel==0.10
 babel==2.3.4
 raven[flask]==6.0.0
+sphinx==1.6.7
+sphinxcontrib-httpdomain==1.6.0
+sphinxcontrib-napoleon==0.6.1
