--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,18 @@
-Flask==0.12.2
-itsdangerous==0.24
-Jinja2==2.8
-Werkzeug==0.10.4
-flask-restful==0.3.4
-python-dateutil==2.2
-requests==2.8.1
+Flask==1.1.2
+itsdangerous==1.1.0
+Jinja2==2.11.2
+Werkzeug==1.0.1
+Flask-RESTful==0.3.8
+python-dateutil==2.8.1
+requests==2.24.0
 nose==1.3.7
-boto3==1.4.4
-PyJWT==1.6.4
-passlib==1.7.1
-cryptography==2.2
-flask-babel==0.10
-babel==2.3.4
-raven[flask]==6.0.0
-sphinx==1.6.7
-sphinxcontrib-httpdomain==1.6.0
-sphinxcontrib-napoleon==0.6.1
+boto3==1.15.1
+PyJWT==1.7.1
+passlib==1.7.2
+cryptography==2.6.1
+Flask-Babel==2.0.0
+Babel==2.8.0
+raven==6.10.0
+Sphinx==3.2.1
+sphinxcontrib-httpdomain==1.7.0
+sphinxcontrib-napoleon==0.7
