--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 Flask==1.1.2
+Flask-Babel==2.0.0
 itsdangerous==1.1.0
 Jinja2==2.11.2
 Werkzeug==1.0.1
@@ -16,3 +17,5 @@ raven==6.10.0
 Sphinx==3.2.1
 sphinxcontrib-httpdomain==1.7.0
 sphinxcontrib-napoleon==0.7
+uWSGI==2.0.19.1
+
